# ingesto

./: .gitignore  Cargo.toml  Containerfile  Dockerfile  LICENSE  LICENSE-MIT  README.md
confui/: Cargo.toml  README.md
confui/src/: lib.rs  utils.rs
confui/webpack/: index.js  main.css  package-lock.json  package.json  template.html  webpack.config.js
doc/: exporter-azuredcr.md  exporter-database.md  parser.md  queue.md  receiver-database.md  receiver-file.md  receiver-network.md  receiver-polling.md  receiver-webhook.md  template.md
exporter/azuredcr/: Cargo.toml
exporter/exportdb/: Cargo.toml
exporter/exportdb/src/: config.rs  db.rs  main.rs
receiver/database/: Cargo.toml
receiver/file/: Cargo.toml
receiver/file/src/: config.rs  main.rs
receiver/network/: Cargo.toml
receiver/network/src/: config.rs  main.rs
receiver/polling/: Cargo.toml
receiver/polling/src/: .main.rs.kate-swp  config.rs  main.rs  template.rs
receiver/webhook/: Cargo.toml
receiver/webhook/src/: config.rs  main.rs
shared/: Cargo.toml
shared/src/: errors.rs  lib.rs  parser.rs  queue.rs  receiver.rs  template.rs  types.rs
