[package]
name = "confui"
description = "INGESTO ConfUI is to create and change configuration files for all ingesto receivers and exporters"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
	"Window",
	"console",
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for small code size.
opt-level = "s"
