[package]
name = "shared"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
toml = { version = "1" }
regex = { version = "1" }
serde_json = { version = "1" }
serde_json_path = { version = "0" }

anyhow = { workspace = true }
clap = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
