[package]
name = "shared"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
env = { version = "1" }
toml = { version = "1" }
serde_json_path = { version = "0" }

anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
dateparser = { workspace = true }
jiff = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-proto = { workspace = true }
opentelemetry_sdk = { workspace = true }
parse_datetime = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tiny_http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
