[package]
name = "exportdb"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
shared = { path = "../../shared" }

tiny_http = { version = "0" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
