[package]
name = "ingesto-network-polling"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
shared = { path = "../../shared" }

cron = { version = "0" }
chrono = { version = "0" }
reqwest = { version = "0", features = [ "blocking" ] }
http = { version = "1" }

anyhow = { workspace = true }
dashmap = { workspace = true }
dateparser = { workspace = true }
notify = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
