[package]
name = "ingesto-network-polling"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
shared = { path = "../../shared" }

cron = { version = "0" }
http = { version = "1" }
reqwest = { version = "0", features = [ "blocking" ] }

anyhow = { workspace = true }
chrono = { workspace = true }
dateparser = { workspace = true }
dashmap = { workspace = true }
jiff = { workspace = true }
notify = { workspace = true }
once_cell = { workspace = true }
parse_datetime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
