[package]
name = "ingesto-network-polling"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
shared = { path = "../../shared" }

cron = { version = "0" }
http = { version = "1" }
reqwest = { version = "0", features = [ "blocking" ] }

anyhow = { workspace = true }
chrono = { workspace = true }
notify = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
