[package]
name = "ingesto-webhook-listener"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
shared = { path = "../../shared" }

anyhow = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tiny_http = { workspace = true }
tracing = { workspace = true }
